tests/Rules/Structure/Fixtures/valid/skip_link.html.twig
<a class="skip-link" href="#main">Skip to content</a>
<nav>…</nav>
<main id="main">Content</main>
