tests/Rules/Structure/Fixtures/invalid/no_skip_link.html.twig
{# 0 errors #}
<nav>Navigation</nav>
<div id="main">Content without skip link</div>
